<resources>
    <string name="app_name">AppProyecto</string>
    <string name="labelUsuario">Ingresar Usuario</string>
    <string name="labelClave">Ingresar Clave</string>
    <string name="labelNombre">Ingresar Nombre</string>
    <string name="labelPaterno">Ingresar Apellido Paterno</string>
    <string name="labelMaterno">Ingresar Apellido Materno</string>
    <string name="labelSueldo">Ingresar Sueldo</string>
    <string name="labelHijos">Ingresar Hijos</string>
    <string name="labelSexo">Seleccione Sexo</string>

    <string name="labelCliente">Ingresar Cliente</string>
    <string name="checkDramatica">Dramática</string>
    <string name="checkInfantil">Infantil</string>
    <string name="labelPelicula">Seleccione Pelicula</string>
    <string name="labelNinos">Ingresar Asientos Niños</string>
    <string name="labelAdultos">Ingresar Asientos Adultos</string>

    <string-array name="simple_items">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    
    <string-array name="peliculas">
        <item>Escojer</item>
    </string-array>
</resources>